fix(lab): improve dev experience on smaller screens
When window height is less than 850px:

- hide device titles
- reduce size of device previews

fixes https://github.com/ionic-team/ionic-cli/issues/3658

--- a/packages/@ionic/lab/src/stencil/assets/variables.css
+++ b/packages/@ionic/lab/src/stencil/assets/variables.css
@@ -32,4 +32,8 @@
   --main-bg: var(--body-bg);
   --section-bg: #151a21;
   --font-color: #a2a9b4;
+
+  --frame-ratio: .562; /* width/height */
+  --frame-default-width: 375px;
+  --frame-default-height: calc(var(--frame-default-width) / var(--frame-ratio));
 }
